--- a/src/Panama/Resources/Dictionary/Brush.xaml
+++ b/src/Panama/Resources/Dictionary/Brush.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
     <!-- Background -->
     <SolidColorBrush x:Key="DefaultBackgroundBrush" Color="#ffffff"/>
@@ -9,6 +8,7 @@
     <SolidColorBrush x:Key="SelectedBackgroundBrush" Color="#DDD" />
     <SolidColorBrush x:Key="TextBoxBackgroundBrush" Color="Honeydew"/>
     <SolidColorBrush x:Key="SelectorBackgroundBrush" Color="DarkBlue"/>
+    <SolidColorBrush x:Key="LightBackgroundBrush" Color="GhostWhite"/>
     
     <!-- Foreground -->
     <SolidColorBrush x:Key="DefaultForegroundBrush" Color="#0000f0"/>
@@ -28,6 +28,8 @@
     
     <!-- Header -->
     <SolidColorBrush x:Key="DefaultHeaderBrush" Color="LightSteelBlue"/>
+    <SolidColorBrush x:Key="LightHeaderBrush" Color="Azure"/>
+    <SolidColorBrush x:Key="RolloverHeaderBrush" Color="#80ADD8E6"/>
 
     <!-- Menu -->
     <SolidColorBrush x:Key="DefaultMenuBrush" Color="#707070"/>
@@ -73,83 +75,4 @@
         </GradientBrush.GradientStops>
     </LinearGradientBrush>
     
-    
-    <!-- Fill Brushes -->
-    <LinearGradientBrush x:Key="StatusBarBrush" StartPoint="0.00,0.00" EndPoint="1.00,1.00">
-        <GradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Color="#FFBADBA5" Offset="0.000"/>
-                <GradientStop Color="#FFD1D1D1" Offset="1.000"/>
-            </GradientStopCollection>
-        </GradientBrush.GradientStops>
-    </LinearGradientBrush>
-
-    <LinearGradientBrush x:Key="HeaderBrush" StartPoint="0.00,0.00" EndPoint="1.00,1.00">
-        <GradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Color="#FF8FB8FF" Offset="0.000"/>
-                <GradientStop Color="#FFF0F0ED" Offset="1.000"/>
-            </GradientStopCollection>
-        </GradientBrush.GradientStops>
-    </LinearGradientBrush>
-
-    <LinearGradientBrush x:Key="NormalBrush" StartPoint="0,0" EndPoint="0,1">
-        <GradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Color="#FFF" Offset="0.0"/>
-                <GradientStop Color="#CCC" Offset="1.0"/>
-            </GradientStopCollection>
-        </GradientBrush.GradientStops>
-    </LinearGradientBrush>
-
-    <LinearGradientBrush x:Key="DarkBrush" StartPoint="0,0" EndPoint="0,1">
-        <GradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Color="#FFF" Offset="0.0"/>
-                <GradientStop Color="#AAA" Offset="1.0"/>
-            </GradientStopCollection>
-        </GradientBrush.GradientStops>
-    </LinearGradientBrush>
-
-    <LinearGradientBrush x:Key="PressedBrush" StartPoint="0,0" EndPoint="0,1">
-        <GradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Color="#BBB" Offset="0.0"/>
-                <GradientStop Color="#EEE" Offset="0.1"/>
-                <GradientStop Color="#EEE" Offset="0.9"/>
-                <GradientStop Color="#FFF" Offset="1.0"/>
-            </GradientStopCollection>
-        </GradientBrush.GradientStops>
-    </LinearGradientBrush>
-
-
-    
-    <!-- Border Brushes -->
-    <LinearGradientBrush x:Key="NormalBorderBrush" StartPoint="0,0" EndPoint="0,1">
-        <GradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Color="#CCC" Offset="0.0"/>
-                <GradientStop Color="#444" Offset="1.0"/>
-            </GradientStopCollection>
-        </GradientBrush.GradientStops>
-    </LinearGradientBrush>
-
-    <LinearGradientBrush x:Key="DefaultedBorderBrush" StartPoint="0,0" EndPoint="0,1">
-        <GradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Color="#777" Offset="0.0"/>
-                <GradientStop Color="#000" Offset="1.0"/>
-            </GradientStopCollection>
-        </GradientBrush.GradientStops>
-    </LinearGradientBrush>
-
-    <LinearGradientBrush x:Key="PressedBorderBrush" StartPoint="0,0" EndPoint="0,1">
-        <GradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Color="#444" Offset="0.0"/>
-                <GradientStop Color="#888" Offset="1.0"/>
-            </GradientStopCollection>
-        </GradientBrush.GradientStops>
-    </LinearGradientBrush>
-
 </ResourceDictionary>
