--- a/src/Panama/View/AuthorView.xaml
+++ b/src/Panama/View/AuthorView.xaml
@@ -5,35 +5,47 @@
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
     xmlns:view="clr-namespace:Restless.Panama.View"    
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:AuthorViewModel}"
     mc:Ignorable="d"
     d:DesignWidth="860" d:DesignHeight="500">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1.5*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="{StaticResource GridRowHeightTool}" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <!-- Controls specific to this view-->
+    <Grid tk:Property.ColumnWidths="*,*" tk:Property.RowHeights="Auto,*">
+
         <Grid Grid.Column="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <view:SimpleRowFilter Grid.Column="0" HorizontalAlignment="Left" />
-            <ItemsControl Grid.Column="1" HorizontalAlignment="Right" Style="{StaticResource ItemsControlMenu}" ItemsSource="{Binding Path=VisualCommands}"/>
+            <!--<view:SimpleRowFilter Grid.Column="0" HorizontalAlignment="Left" />-->
+            <!--<ItemsControl Grid.Column="1" HorizontalAlignment="Right" Style="{StaticResource ItemsControlMenu}" ItemsSource="{Binding Path=VisualCommands}"/>-->
         </Grid>
         <!-- Main data grid to display the tabular data  -->
-        <DataGrid Grid.Row="1" Grid.Column="0" ItemsSource="{Binding Path=MainSource.View}" SelectedItem="{Binding SelectedItem}" tk:DataGridColumns.Columns="{Binding Columns}">
+        <DataGrid
+            Grid.Row="1"
+            ItemsSource="{Binding ListView}"
+            SelectedItem="{Binding SelectedItem}"
+            tk:DataGridColumns.Columns="{Binding Columns}">
+            
             <DataGrid.ContextMenu>
                 <ContextMenu ItemsSource="{Binding MenuItems}"/>
             </DataGrid.ContextMenu>
+            
         </DataGrid>
-        <!-- Nested editing control on the right -->
-        <view:AuthorEdit Grid.Row="1" Grid.Column="1" Visibility="{Binding EditVisibility}"/>
+
+        <Border
+            Grid.Row="1"
+            Grid.Column="1"
+            Style="{StaticResource BorderEditContainerStyle}"
+            Visibility="{Binding EditVisibility}">
+
+            <StackPanel Style="{StaticResource DataEntryPanelStyle}">
+                <TextBlock Text="Author Name"/>
+                <TextBox Text="{Binding SelectedRow[name]}" />
+
+                <CheckBox IsChecked="{Binding SelectedRow[isdefault]}" Content="Default author"/>
+
+            </StackPanel>
+            
+        </Border>
     </Grid>
-    <!-- end main grid-->
 </UserControl>
