Remove filter pieces from DataGridViewModel
Old filter pieces dealt with creating a string to apply to the DataView. New filtering is handled via the ListView and its associated custom sort method. Added a ClearFilterCommand to DataGridViewModel with methods a derived class can override if needed.

--- a/src/Panama/View/PublisherView.xaml
+++ b/src/Panama/View/PublisherView.xaml
@@ -70,7 +70,7 @@
                 Content="{x:Static r:Strings.MenuItemClear}"
                 ToolTip="{x:Static r:Strings.ToolTipFilterClear}"
                 Icon="{StaticResource FilterOffIconKey}"
-                Command="{Binding Commands[ClearFilter]}"/>
+                Command="{Binding ClearFilterCommand}"/>
 
             <Separator/>
 
