--- a/src/Panama/View/AuthorView.xaml
+++ b/src/Panama/View/AuthorView.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    xmlns:view="clr-namespace:Restless.Panama.View"    
+    xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:AuthorViewModel}"
@@ -11,26 +11,29 @@
     d:DesignWidth="860" d:DesignHeight="500">
     <Grid tk:Property.ColumnWidths="*,*" tk:Property.RowHeights="Auto,*">
 
-        <Grid Grid.Column="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <!--<view:SimpleRowFilter Grid.Column="0" HorizontalAlignment="Left" />-->
-            <!--<ItemsControl Grid.Column="1" HorizontalAlignment="Right" Style="{StaticResource ItemsControlMenu}" ItemsSource="{Binding Path=VisualCommands}"/>-->
-        </Grid>
-        <!-- Main data grid to display the tabular data  -->
-        <DataGrid
-            Grid.Row="1"
-            ItemsSource="{Binding ListView}"
-            SelectedItem="{Binding SelectedItem}"
-            tk:DataGridColumns.Columns="{Binding Columns}">
-            
-            <DataGrid.ContextMenu>
-                <ContextMenu ItemsSource="{Binding MenuItems}"/>
-            </DataGrid.ContextMenu>
-            
-        </DataGrid>
+        <StatusBar Margin="0,0,4,0">
+            <TextBlock Text="{x:Static r:Strings.MenuItemAuthors}"/>
+            <!-- no filters for now -->
+        </StatusBar>
+
+        <Border Grid.Row="1" Style="{StaticResource BorderEditContainerStyle}">
+            <DataGrid
+                ItemsSource="{Binding ListView}"
+                SelectedItem="{Binding SelectedItem}"
+                tk:DataGridColumns.Columns="{Binding Columns}">
+
+                <DataGrid.ContextMenu>
+                    <ContextMenu ItemsSource="{Binding MenuItems}"/>
+                </DataGrid.ContextMenu>
+
+            </DataGrid>
+        </Border>
+
+        <StatusBar Grid.Column="2" Margin="4,0,0,0">
+            <TextBlock 
+                Style="{StaticResource TitleDisplayTextBlockStyle}"
+                Text="{Binding SelectedAuthor.Name}"/>
+        </StatusBar>
 
         <Border
             Grid.Row="1"
@@ -39,11 +42,9 @@
             Visibility="{Binding EditVisibility}">
 
             <StackPanel Style="{StaticResource DataEntryPanelStyle}">
-                <TextBlock Text="Author Name"/>
-                <TextBox Text="{Binding SelectedRow[name]}" />
-
-                <CheckBox IsChecked="{Binding SelectedRow[isdefault]}" Content="Default author"/>
-
+                <TextBlock Text="{x:Static r:Strings.TextName}"/>
+                <TextBox Text="{Binding SelectedAuthor.Name}"/>
+                <CheckBox IsChecked="{Binding SelectedAuthor.IsDefault}" Content="Default author"/>
             </StackPanel>
             
         </Border>
