--- a/src/Panama/View/SelfPublisherView.xaml
+++ b/src/Panama/View/SelfPublisherView.xaml
@@ -22,15 +22,16 @@
                 RelativeSource={RelativeSource AncestorType=Grid},
                 Converter={cv:SubtractionConverter}, ConverterParameter=380}"
                 MinWidth="360"/>
-            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="{StaticResource GridRowHeightTool}" />
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <StatusBar Margin="0,0,4,0">
+            <TextBlock Text="Self publishers"/>
             <!-- no filters for now -->
         </StatusBar>
 
