--- a/src/Panama/View/TagView.xaml
+++ b/src/Panama/View/TagView.xaml
@@ -9,38 +9,45 @@
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:TagViewModel}"
     mc:Ignorable="d"
     d:DesignWidth="400" d:DesignHeight="200">
-    <Grid tk:Property.ColumnWidths="*,*">
+    <Grid tk:Property.ColumnWidths="*,*" tk:Property.RowHeights="Auto,*">
 
-        <HeaderedContentControl Margin="2,0" Header="{x:Static r:Strings.MenuItemTags}">
+        <StatusBar Margin="0,0,4,0">
+            <TextBlock Text="{x:Static r:Strings.MenuItemTags}"/>
+            <!-- no filters for now -->
+        </StatusBar>
+
+        <Border Grid.Row="1" Style="{StaticResource BorderEditContainerStyle}">
             <DataGrid
-                CanUserSortColumns="False"
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding ListView}" 
                 SelectedItem="{Binding SelectedItem}"
                 tk:DataGridColumns.Columns="{Binding Columns}">
+                
                 <DataGrid.ContextMenu>
                     <ContextMenu ItemsSource="{Binding MenuItems}"/>
                 </DataGrid.ContextMenu>
+                
             </DataGrid>            
-            
-        </HeaderedContentControl>
+        </Border>
 
-        <HeaderedContentControl
-            Grid.Column="1"
-            Margin="2,0"
-            Header="{Binding SelectedTag.Tag}"
+        <StatusBar Grid.Column="1" Margin="4,0,0,0">
+            <TextBlock 
+                Style="{StaticResource TitleDisplayTextBlockStyle}"
+                Text="{Binding SelectedTag.Tag}"/>
+        </StatusBar>
+
+        <Border
+            Grid.Row="1" Grid.Column="1"
+            Style="{StaticResource BorderEditContainerStyle}"
             Visibility="{Binding EditVisibility}">
-            <Grid
-                tk:Property.RowHeights="Auto,Auto,Auto,Auto"
-                Style="{StaticResource DataEntryPanelStyle}">
-
-                <TextBlock Text="Tag Name"/>
-                <TextBox Grid.Row="1" Text="{Binding SelectedTag.Tag}"/>
-                <TextBlock Grid.Row="2" Text="Description"/>
-                <TextBox Grid.Row="3" Text="{Binding SelectedTag.Description}"/>
-            </Grid>
             
-        </HeaderedContentControl>
-        
+            <StackPanel Style="{StaticResource DataEntryPanelStyle}">
+                <TextBlock Text="{x:Static r:Strings.TextName}"/>
+                <TextBox Text="{Binding SelectedTag.Tag}"/>
+                <TextBlock Text="{x:Static r:Strings.TextDescription}"/>
+                <TextBox Text="{Binding SelectedTag.Description}"/>
+            </StackPanel>
+            
+        </Border>
     </Grid>
 </UserControl>
