Fix binding for open row, code cleanup

--- a/src/Panama/View/EditControls/TitleEditVersion.xaml
+++ b/src/Panama/View/EditControls/TitleEditVersion.xaml
@@ -22,7 +22,7 @@
                 <ContextMenu ItemsSource="{Binding Versions.MenuItems}"  />
             </DataGrid.ContextMenu>
             <DataGrid.InputBindings>
-                <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding OpenRowCommand}"/>
+                <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding Versions.OpenRowCommand}"/>
             </DataGrid.InputBindings>
         </tk:DataGrid>
         <TextBlock
